--- a/events/1617velv/nyli/1617velv-nyli-cmp-Rankings.html
+++ b/events/1617velv/nyli/1617velv-nyli-cmp-Rankings.html
@@ -1,28 +1,26 @@
-<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>New York LI Center Moriches<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
-<TR  ALIGN=CENTER><TD>1</TD><TD>9501</TD><TD>Zero to Robo</TD><TD>10</TD><TD>133</TD><TD>130</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>2</TD><TD>10696</TD><TD>Syosset Syborgs</TD><TD>10</TD><TD>85</TD><TD>70</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>3</TD><TD>8196</TD><TD>CTRL ALT WIN</TD><TD>9</TD><TD>215</TD><TD>130</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>4</TD><TD>8325</TD><TD>Oyster Bot</TD><TD>9</TD><TD>158</TD><TD>120</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>5</TD><TD>10738</TD><TD>SBS Bears</TD><TD>8</TD><TD>173</TD><TD>78</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>6</TD><TD>10419</TD><TD>Syosset Elite</TD><TD>8</TD><TD>165</TD><TD>115</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>7</TD><TD>11401</TD><TD>Girl Powered Robotics (GPR)</TD><TD>8</TD><TD>131</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>8</TD><TD>6574</TD><TD>Task Main</TD><TD>6</TD><TD>185</TD><TD>115</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>9</TD><TD>6939</TD><TD>Pandemonium2</TD><TD>6</TD><TD>170</TD><TD>70</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>10</TD><TD>7164</TD><TD>Falcon Bots</TD><TD>6</TD><TD>130</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>11</TD><TD>12382</TD><TD>SYO Sparks</TD><TD>6</TD><TD>90</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>12</TD><TD>4137</TD><TD>IslandBots</TD><TD>5</TD><TD>155</TD><TD>115</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>13</TD><TD>9122</TD><TD>Infernobotix</TD><TD>5</TD><TD>131</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>14</TD><TD>10532</TD><TD>Shrikes</TD><TD>4</TD><TD>191</TD><TD>70</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>15</TD><TD>8109</TD><TD>Theory of Everything</TD><TD>4</TD><TD>145</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>16</TD><TD>12301</TD><TD>MDQ Golden Eagles</TD><TD>4</TD><TD>135</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>17</TD><TD>8110</TD><TD>WiSE</TD><TD>4</TD><TD>98</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>18</TD><TD>9715</TD><TD>Animatronics</TD><TD>3</TD><TD>150</TD><TD>70</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>19</TD><TD>7035</TD><TD>Radical Robots</TD><TD>3</TD><TD>105</TD><TD>55</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>20</TD><TD>11088</TD><TD>STOBOR</TD><TD>2</TD><TD>125</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>21</TD><TD>5283</TD><TD>LAIMO</TD><TD>2</TD><TD>123</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>22</TD><TD>8073</TD><TD>Quantum Chaos</TD><TD>2</TD><TD>123</TD><TD>65</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>23</TD><TD>10169</TD><TD>Mineola Motors</TD><TD>2</TD><TD>112</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>24</TD><TD>9421</TD><TD>Tornadoes</TD><TD>2</TD><TD>100</TD><TD>50</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>25</TD><TD>12378</TD><TD>Dagaz</TD><TD>2</TD><TD>75</TD><TD>80</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>26</TD><TD>12464</TD><TD>center moriches middle school 2</TD><TD>0</TD><TD>125</TD><TD>55</TD><TD>5</TD>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>New York LI Championship<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>5477</TD><TD>Innovo</TD><TD>8</TD><TD>395</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>3540</TD><TD>RoboBoogie</TD><TD>8</TD><TD>275</TD><TD>210</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>11988</TD><TD>Crusader Robotics</TD><TD>8</TD><TD>230</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>7164</TD><TD>Falcon Bots</TD><TD>7</TD><TD>330</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>10169</TD><TD>Mineola Motors</TD><TD>7</TD><TD>285</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>7407</TD><TD>Team VEGA</TD><TD>6</TD><TD>370</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>10738</TD><TD>SBS Bears</TD><TD>6</TD><TD>365</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>6574</TD><TD>Task Main</TD><TD>6</TD><TD>335</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>10696</TD><TD>Syosset Syborgs</TD><TD>6</TD><TD>270</TD><TD>155</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>8325</TD><TD>Oyster Bot</TD><TD>6</TD><TD>220</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>12382</TD><TD>SYO Sparks</TD><TD>6</TD><TD>220</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>10419</TD><TD>Syosset Elite</TD><TD>6</TD><TD>165</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>11649</TD><TD>Portledge Robo Time</TD><TD>5</TD><TD>320</TD><TD>210</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>8108</TD><TD>Theoretically Impossible</TD><TD>5</TD><TD>260</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>4137</TD><TD>IslandBots</TD><TD>4</TD><TD>340</TD><TD>131</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>8196</TD><TD>CTRL ALT WIN</TD><TD>4</TD><TD>310</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>11401</TD><TD>Girl Powered Robotics (GPR)</TD><TD>4</TD><TD>285</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>6939</TD><TD>Pandemonium2</TD><TD>4</TD><TD>275</TD><TD>105</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>7417</TD><TD>Portledge Robotics</TD><TD>4</TD><TD>265</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>9715</TD><TD>Animatronics</TD><TD>4</TD><TD>215</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>4017</TD><TD>roboPandas</TD><TD>2</TD><TD>445</TD><TD>155</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>5283</TD><TD>LAIMO</TD><TD>2</TD><TD>235</TD><TD>110</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>7120</TD><TD>Bionica</TD><TD>2</TD><TD>230</TD><TD>110</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>24</TD><TD>9501</TD><TD>Zero to Robo</TD><TD>0</TD><TD>200</TD><TD>90</TD><TD>5</TD>
 </TABLE></DIV></HTML>
