--- a/events/1617velv/va/1617velv-va-nod1-Rankings.html
+++ b/events/1617velv/va/1617velv-va-nod1-Rankings.html
@@ -1,23 +1,26 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Virginia Northern D1<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
-<TR  ALIGN=CENTER><TD>1</TD><TD>8297</TD><TD>Geared UP!</TD><TD>10</TD><TD>165</TD><TD>120</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>2</TD><TD>7080</TD><TD>BACON</TD><TD>10</TD><TD>135</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>3</TD><TD>10178</TD><TD>The Legitimates</TD><TD>10</TD><TD>65</TD><TD>100</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>4</TD><TD>1885</TD><TD>ILITE Robotics</TD><TD>8</TD><TD>135</TD><TD>75</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>5</TD><TD>6481</TD><TD>TechnoMancers</TD><TD>8</TD><TD>125</TD><TD>120</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>6</TD><TD>5086</TD><TD>Tutu Turtles</TD><TD>6</TD><TD>175</TD><TD>100</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>7</TD><TD>5401</TD><TD>Washable Warriors</TD><TD>6</TD><TD>166</TD><TD>70</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>8</TD><TD>7955</TD><TD>Archetype</TD><TD>6</TD><TD>76</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>9</TD><TD>7346</TD><TD>Mustachio Peanuts</TD><TD>6</TD><TD>65</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>10</TD><TD>8764</TD><TD>The Mob Bots</TD><TD>6</TD><TD>40</TD><TD>45</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>11</TD><TD>8537</TD><TD>MONRObots</TD><TD>4</TD><TD>166</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>12</TD><TD>33</TD><TD>Enigma</TD><TD>4</TD><TD>145</TD><TD>70</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>13</TD><TD>7872</TD><TD>Rocktown Robotics</TD><TD>4</TD><TD>140</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>14</TD><TD>354</TD><TD>ILITE Robotics</TD><TD>4</TD><TD>100</TD><TD>50</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>15</TD><TD>6341</TD><TD>S.T.A.R.</TD><TD>4</TD><TD>95</TD><TD>100</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>16</TD><TD>12096</TD><TD>Arstotzka</TD><TD>2</TD><TD>110</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>17</TD><TD>8673</TD><TD>Nerdinators</TD><TD>2</TD><TD>85</TD><TD>40</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>18</TD><TD>5904</TD><TD>Animus Ferus</TD><TD>2</TD><TD>50</TD><TD>30</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>19</TD><TD>9803</TD><TD>Fifth Ray</TD><TD>2</TD><TD>50</TD><TD>30</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>20</TD><TD>11209</TD><TD>Code Crushing Griffins</TD><TD>0</TD><TD>185</TD><TD>55</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>21</TD><TD>10515</TD><TD>Xtreme Voltage</TD><TD>0</TD><TD>121</TD><TD>46</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>1</TD><TD>519</TD><TD>ED Too</TD><TD>10</TD><TD>151</TD><TD>160</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>8095</TD><TD>Bulldogs</TD><TD>10</TD><TD>37</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>7117</TD><TD>The Blockheads</TD><TD>8</TD><TD>226</TD><TD>160</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>3749</TD><TD>Bionic Penguins</TD><TD>8</TD><TD>164</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>9073</TD><TD>Knightrix</TD><TD>8</TD><TD>105</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>11479</TD><TD>Circuit Squad</TD><TD>8</TD><TD>103</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>6010</TD><TD>Thunder Stone</TD><TD>7</TD><TD>150</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>7953</TD><TD>Vertigo</TD><TD>7</TD><TD>107</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>7729</TD><TD>Seahawks Robotics</TD><TD>6</TD><TD>100</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>9064</TD><TD>Nerds of the North</TD><TD>6</TD><TD>93</TD><TD>155</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>11718</TD><TD>Warren County Wildcats</TD><TD>6</TD><TD>61</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>11804</TD><TD>Centreville 4</TD><TD>6</TD><TD>40</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>6633</TD><TD>Science Blasters</TD><TD>5</TD><TD>63</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>226</TD><TD>OHS 623 FTC Team 1</TD><TD>4</TD><TD>132</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>33</TD><TD>Enigma</TD><TD>4</TD><TD>48</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>4634</TD><TD>FROGBOTS</TD><TD>3</TD><TD>214</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>10869</TD><TD>Maze Masters</TD><TD>2</TD><TD>155</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>9830</TD><TD>Centreville Robotics</TD><TD>2</TD><TD>138</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>9813</TD><TD>Kilroy Jr. Robotics</TD><TD>2</TD><TD>129</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>11315</TD><TD>GEM Bots</TD><TD>2</TD><TD>78</TD><TD>135</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>10442</TD><TD>Iron Giants</TD><TD>2</TD><TD>77</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>8597</TD><TD>Gizmo Gurus</TD><TD>2</TD><TD>44</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>8383</TD><TD>OddBots</TD><TD>2</TD><TD>31</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>24</TD><TD>6383</TD><TD>Zeus' Bolts</TD><TD>0</TD><TD>86</TD><TD>49</TD><TD>5</TD>
 </TABLE></DIV></HTML>
